docs/api/graphql/v1/operations/mutations/delete-group-invitation.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: delete-group-invitation
title: deleteGroupInvitation
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};








Revoke a pending invitation.

Removes the invitation so the user can no longer accept it. Has no effect if the invitation
was already accepted. Requires `organization_admin` permissions.


```graphql
deleteGroupInvitation(
  organizationId: ID!
  groupId: ID!
  email: String!
): GroupInvitationPayload
```




### Arguments

#### [<code style={{ fontWeight: 'normal' }}>deleteGroupInvitation.<b>organizationId</b></code>](#organization-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#organization-id\} 
Your organization's unique identifier.


#### [<code style={{ fontWeight: 'normal' }}>deleteGroupInvitation.<b>groupId</b></code>](#group-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#group-id\} 
The group the invitation belongs to.


#### [<code style={{ fontWeight: 'normal' }}>deleteGroupInvitation.<b>email</b></code>](#email)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String!</b></code>](/api/graphql/v1/types/scalars/string.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#email\} 
Email address of the invitation to revoke.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>GroupInvitationPayload</b></code>](/api/graphql/v1/types/objects/group-invitation-payload.mdx) <Badge class="badge badge--secondary " text="object"/>